--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,13 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Calculator</name>
   <description>A simple calaculator application</description>  
+  <dependencies> 
 <dependency>
     <groupId>junit</groupId>
     <artifactId>junit-dep</artifactId>
     <version>4.8.2</version>
     <scope>test</scope>
 </dependency>
+</dependencies> 
 
 </project>
